Make thanks component

--- a/src/App.css
+++ b/src/App.css
@@ -17,5 +17,5 @@ body{
   background-color: #141519;
 }
 .container{
-  background: radial-gradient(circle at top, #232a32, #171e26);
+  background: radial-gradient(circle at top, #272f38, #13191f);
 }
